tests/ui/typeck/invalid-stashed-level-issue-121812.stderr
error[E0308]: mismatched types
  --> $DIR/invalid-stashed-level-issue-121812.rs:7:17
   |
LL |     _ = U { b: [()] };
   |                 ^^ expected `u8`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
