tests/ui/typeck/invalid-stashed-level-issue-121812.rs
union U {
    a: u16,
    b: [u8; 3],
}

fn main() {
    _ = U { b: [()] }; //~ ERROR mismatched types
}
